@@ -682,21 +682,19 @@ if test "${have_gtk}" = "yes" ; then
 	if test "${gtk_version}" = "3.0" ; then
 		PKG_CHECK_MODULES(VTE, vte-2.91, have_vte=yes, have_vte=no)
 		if test "$have_vte" = "yes" ; then
-			LIBVTE_SUFFIX=-2.91
+			VTE_ABI=2.91
 		else
 			PKG_CHECK_MODULES(VTE, vte-2.90, have_vte=yes, have_vte=no)
-			LIBVTE_SUFFIX=2_90
+			if test "$have_vte" = "yes"; then
+				VTE_ABI=2.90
+			fi
 		fi
-		AC_SUBST(LIBVTE_SUFFIX)
 	else
 		PKG_CHECK_MODULES(VTE, vte, have_vte=yes, have_vte=no)
 	fi
 	if test "$have_vte" = "yes" ; then
 		OUTPUT_FILES="gtk/Makefile ${OUTPUT_FILES}"
-		# "tr ..." is hack for cygwin.
-		# (removing \r which is output by win32 native pkg-config.)
-		VTE_CFLAGS="`echo $VTE_CFLAGS | tr -d '\r'`"
-		AC_SUBST(VTE_CFLAGS)
+		AC_SUBST(VTE_ABI)
 	fi
 else
 	have_vte=no
